stage4/ex1/y.output
Terminals unused in grammar

    ASSGN


State 62 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: Declarations KW_BEGIN Slist END SEMI
    2        | Declarations KW_BEGIN END SEMI

    3 Declarations: DECL DeclList ENDDECL
    4             | DECL ENDDECL

    5 DeclList: DeclList Decl
    6         | Decl

    7 Decl: Type VarList SEMI

    8 Type: T_INT
    9     | T_STR

   10 VarList: VarList COMMA ID
   11        | ID
   12        | VarList COMMA ID LBRACK NUM RBRACK
   13        | ID LBRACK NUM RBRACK
   14        | ID LBRACK NUM RBRACK LBRACK NUM RBRACK
   15        | VarList COMMA ID LBRACK NUM RBRACK LBRACK NUM RBRACK

   16 Slist: Slist Stmt
   17      | Stmt

   18 Stmt: InputStmt
   19     | OutputStmt
   20     | AsgStmt
   21     | IfStmt
   22     | WhileStmt
   23     | BrkStmt
   24     | ContStmt
   25     | repeatUntilStmt
   26     | doWhileStmt

   27 IfStmt: IF '(' expr ')' THEN Slist ELSE Slist ENDIF SEMI
   28       | IF '(' expr ')' THEN Slist ENDIF SEMI

   29 WhileStmt: WHILE '(' expr ')' DO Slist ENDWHILE SEMI

   30 BrkStmt: BREAK SEMI

   31 ContStmt: CONT SEMI

   32 repeatUntilStmt: REPEAT Slist UNTIL '(' expr ')' SEMI

   33 doWhileStmt: DO Slist WHILE '(' expr ')' SEMI

   34 InputStmt: READ '(' id ')' SEMI

   35 OutputStmt: WRITE '(' expr ')' SEMI

   36 AsgStmt: id ASSIGN expr SEMI

   37 expr: expr PLUS expr
   38     | expr MINUS expr
   39     | expr MUL expr
   40     | expr DIV expr
   41     | expr LT expr
   42     | expr GT expr
   43     | expr LE expr
   44     | expr GE expr
   45     | expr NE expr
   46     | expr EQ expr
   47     | '(' expr ')'
   48     | NUM
   49     | STRVAL
   50     | id

   51 id: ID
   52   | ID LBRACK NUM RBRACK
   53   | ID LBRACK NUM RBRACK LBRACK NUM RBRACK
   54   | ID LBRACK expr RBRACK
   55   | ID LBRACK expr RBRACK LBRACK expr RBRACK


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 27 28 29 32 33 34 35 47
    ')' (41) 27 28 29 32 33 34 35 47
    error (256)
    KW_BEGIN (258) 1 2
    END (259) 1 2
    READ (260) 34
    WRITE (261) 35
    PLUS (262) 37
    MINUS (263) 38
    MUL (264) 39
    DIV (265) 40
    NUM <node> (266) 12 13 14 15 48 52 53
    ID <node> (267) 10 11 12 13 14 15 51 52 53 54 55
    SEMI <node> (268) 1 2 7 27 28 29 30 31 32 33 34 35 36
    ASSIGN (269) 36
    STRVAL <node> (270) 49
    LE (271) 43
    LT (272) 41
    GE (273) 44
    GT (274) 42
    NE (275) 45
    EQ (276) 46
    IF (277) 27 28
    WHILE (278) 29 33
    ENDWHILE (279) 29
    ENDIF (280) 27 28
    DO (281) 29 33
    THEN (282) 27 28
    ELSE (283) 27
    BREAK (284) 30
    CONT (285) 31
    REPEAT (286) 32
    UNTIL (287) 32
    DECL (288) 3 4
    ENDDECL (289) 3 4
    T_INT (290) 8
    T_STR (291) 9
    COMMA (292) 10 12 15
    LBRACK (293) 12 13 14 15 52 53 54 55
    RBRACK (294) 12 13 14 15 52 53 54 55
    ASSGN (295)


Nonterminals, with rules where they appear

    $accept (43)
        on left: 0
    program <node> (44)
        on left: 1 2
        on right: 0
    Declarations <node> (45)
        on left: 3 4
        on right: 1 2
    DeclList <node> (46)
        on left: 5 6
        on right: 3 5
    Decl <node> (47)
        on left: 7
        on right: 5 6
    Type <node> (48)
        on left: 8 9
        on right: 7
    VarList <node> (49)
        on left: 10 11 12 13 14 15
        on right: 7 10 12 15
    Slist <node> (50)
        on left: 16 17
        on right: 1 16 27 28 29 32 33
    Stmt <node> (51)
        on left: 18 19 20 21 22 23 24 25 26
        on right: 16 17
    IfStmt <node> (52)
        on left: 27 28
        on right: 21
    WhileStmt <node> (53)
        on left: 29
        on right: 22
    BrkStmt <node> (54)
        on left: 30
        on right: 23
    ContStmt <node> (55)
        on left: 31
        on right: 24
    repeatUntilStmt <node> (56)
        on left: 32
        on right: 25
    doWhileStmt <node> (57)
        on left: 33
        on right: 26
    InputStmt <node> (58)
        on left: 34
        on right: 18
    OutputStmt <node> (59)
        on left: 35
        on right: 19
    AsgStmt <node> (60)
        on left: 36
        on right: 20
    expr <node> (61)
        on left: 37 38 39 40 41 42 43 44 45 46 47 48 49 50
        on right: 27 28 29 32 33 35 36 37 38 39 40 41 42 43 44 45 46 47 54 55
    id <node> (62)
        on left: 51 52 53 54 55
        on right: 34 36 50


State 0

    0 $accept: • program $end

    DECL  shift, and go to state 1

    program       go to state 2
    Declarations  go to state 3


State 1

    3 Declarations: DECL • DeclList ENDDECL
    4             | DECL • ENDDECL

    ENDDECL  shift, and go to state 4
    T_INT    shift, and go to state 5
    T_STR    shift, and go to state 6

    DeclList  go to state 7
    Decl      go to state 8
    Type      go to state 9


State 2

    0 $accept: program • $end

    $end  shift, and go to state 10


State 3

    1 program: Declarations • KW_BEGIN Slist END SEMI
    2        | Declarations • KW_BEGIN END SEMI

    KW_BEGIN  shift, and go to state 11


State 4

    4 Declarations: DECL ENDDECL •

    $default  reduce using rule 4 (Declarations)


State 5

    8 Type: T_INT •

    $default  reduce using rule 8 (Type)


State 6

    9 Type: T_STR •

    $default  reduce using rule 9 (Type)


State 7

    3 Declarations: DECL DeclList • ENDDECL
    5 DeclList: DeclList • Decl

    ENDDECL  shift, and go to state 12
    T_INT    shift, and go to state 5
    T_STR    shift, and go to state 6

    Decl  go to state 13
    Type  go to state 9


State 8

    6 DeclList: Decl •

    $default  reduce using rule 6 (DeclList)


State 9

    7 Decl: Type • VarList SEMI

    ID  shift, and go to state 14

    VarList  go to state 15


State 10

    0 $accept: program $end •

    $default  accept


State 11

    1 program: Declarations KW_BEGIN • Slist END SEMI
    2        | Declarations KW_BEGIN • END SEMI

    END     shift, and go to state 16
    READ    shift, and go to state 17
    WRITE   shift, and go to state 18
    ID      shift, and go to state 19
    IF      shift, and go to state 20
    WHILE   shift, and go to state 21
    DO      shift, and go to state 22
    BREAK   shift, and go to state 23
    CONT    shift, and go to state 24
    REPEAT  shift, and go to state 25

    Slist            go to state 26
    Stmt             go to state 27
    IfStmt           go to state 28
    WhileStmt        go to state 29
    BrkStmt          go to state 30
    ContStmt         go to state 31
    repeatUntilStmt  go to state 32
    doWhileStmt      go to state 33
    InputStmt        go to state 34
    OutputStmt       go to state 35
    AsgStmt          go to state 36
    id               go to state 37


State 12

    3 Declarations: DECL DeclList ENDDECL •

    $default  reduce using rule 3 (Declarations)


State 13

    5 DeclList: DeclList Decl •

    $default  reduce using rule 5 (DeclList)


State 14

   11 VarList: ID •
   13        | ID • LBRACK NUM RBRACK
   14        | ID • LBRACK NUM RBRACK LBRACK NUM RBRACK

    LBRACK  shift, and go to state 38

    $default  reduce using rule 11 (VarList)


State 15

    7 Decl: Type VarList • SEMI
   10 VarList: VarList • COMMA ID
   12        | VarList • COMMA ID LBRACK NUM RBRACK
   15        | VarList • COMMA ID LBRACK NUM RBRACK LBRACK NUM RBRACK

    SEMI   shift, and go to state 39
    COMMA  shift, and go to state 40


State 16

    2 program: Declarations KW_BEGIN END • SEMI

    SEMI  shift, and go to state 41


State 17

   34 InputStmt: READ • '(' id ')' SEMI

    '('  shift, and go to state 42


State 18

   35 OutputStmt: WRITE • '(' expr ')' SEMI

    '('  shift, and go to state 43


State 19

   51 id: ID •
   52   | ID • LBRACK NUM RBRACK
   53   | ID • LBRACK NUM RBRACK LBRACK NUM RBRACK
   54   | ID • LBRACK expr RBRACK
   55   | ID • LBRACK expr RBRACK LBRACK expr RBRACK

    LBRACK  shift, and go to state 44

    $default  reduce using rule 51 (id)


State 20

   27 IfStmt: IF • '(' expr ')' THEN Slist ELSE Slist ENDIF SEMI
   28       | IF • '(' expr ')' THEN Slist ENDIF SEMI

    '('  shift, and go to state 45


State 21

   29 WhileStmt: WHILE • '(' expr ')' DO Slist ENDWHILE SEMI

    '('  shift, and go to state 46


State 22

   33 doWhileStmt: DO • Slist WHILE '(' expr ')' SEMI

    READ    shift, and go to state 17
    WRITE   shift, and go to state 18
    ID      shift, and go to state 19
    IF      shift, and go to state 20
    WHILE   shift, and go to state 21
    DO      shift, and go to state 22
    BREAK   shift, and go to state 23
    CONT    shift, and go to state 24
    REPEAT  shift, and go to state 25

    Slist            go to state 47
    Stmt             go to state 27
    IfStmt           go to state 28
    WhileStmt        go to state 29
    BrkStmt          go to state 30
    ContStmt         go to state 31
    repeatUntilStmt  go to state 32
    doWhileStmt      go to state 33
    InputStmt        go to state 34
    OutputStmt       go to state 35
    AsgStmt          go to state 36
    id               go to state 37


State 23

   30 BrkStmt: BREAK • SEMI

    SEMI  shift, and go to state 48


State 24

   31 ContStmt: CONT • SEMI

    SEMI  shift, and go to state 49


State 25

   32 repeatUntilStmt: REPEAT • Slist UNTIL '(' expr ')' SEMI

    READ    shift, and go to state 17
    WRITE   shift, and go to state 18
    ID      shift, and go to state 19
    IF      shift, and go to state 20
    WHILE   shift, and go to state 21
    DO      shift, and go to state 22
    BREAK   shift, and go to state 23
    CONT    shift, and go to state 24
    REPEAT  shift, and go to state 25

    Slist            go to state 50
    Stmt             go to state 27
    IfStmt           go to state 28
    WhileStmt        go to state 29
    BrkStmt          go to state 30
    ContStmt         go to state 31
    repeatUntilStmt  go to state 32
    doWhileStmt      go to state 33
    InputStmt        go to state 34
    OutputStmt       go to state 35
    AsgStmt          go to state 36
    id               go to state 37


State 26

    1 program: Declarations KW_BEGIN Slist • END SEMI
   16 Slist: Slist • Stmt

    END     shift, and go to state 51
    READ    shift, and go to state 17
    WRITE   shift, and go to state 18
    ID      shift, and go to state 19
    IF      shift, and go to state 20
    WHILE   shift, and go to state 21
    DO      shift, and go to state 22
    BREAK   shift, and go to state 23
    CONT    shift, and go to state 24
    REPEAT  shift, and go to state 25

    Stmt             go to state 52
    IfStmt           go to state 28
    WhileStmt        go to state 29
    BrkStmt          go to state 30
    ContStmt         go to state 31
    repeatUntilStmt  go to state 32
    doWhileStmt      go to state 33
    InputStmt        go to state 34
    OutputStmt       go to state 35
    AsgStmt          go to state 36
    id               go to state 37


State 27

   17 Slist: Stmt •

    $default  reduce using rule 17 (Slist)


State 28

   21 Stmt: IfStmt •

    $default  reduce using rule 21 (Stmt)


State 29

   22 Stmt: WhileStmt •

    $default  reduce using rule 22 (Stmt)


State 30

   23 Stmt: BrkStmt •

    $default  reduce using rule 23 (Stmt)


State 31

   24 Stmt: ContStmt •

    $default  reduce using rule 24 (Stmt)


State 32

   25 Stmt: repeatUntilStmt •

    $default  reduce using rule 25 (Stmt)


State 33

   26 Stmt: doWhileStmt •

    $default  reduce using rule 26 (Stmt)


State 34

   18 Stmt: InputStmt •

    $default  reduce using rule 18 (Stmt)


State 35

   19 Stmt: OutputStmt •

    $default  reduce using rule 19 (Stmt)


State 36

   20 Stmt: AsgStmt •

    $default  reduce using rule 20 (Stmt)


State 37

   36 AsgStmt: id • ASSIGN expr SEMI

    ASSIGN  shift, and go to state 53


State 38

   13 VarList: ID LBRACK • NUM RBRACK
   14        | ID LBRACK • NUM RBRACK LBRACK NUM RBRACK

    NUM  shift, and go to state 54


State 39

    7 Decl: Type VarList SEMI •

    $default  reduce using rule 7 (Decl)


State 40

   10 VarList: VarList COMMA • ID
   12        | VarList COMMA • ID LBRACK NUM RBRACK
   15        | VarList COMMA • ID LBRACK NUM RBRACK LBRACK NUM RBRACK

    ID  shift, and go to state 55


State 41

    2 program: Declarations KW_BEGIN END SEMI •

    $default  reduce using rule 2 (program)


State 42

   34 InputStmt: READ '(' • id ')' SEMI

    ID  shift, and go to state 19

    id  go to state 56


State 43

   35 OutputStmt: WRITE '(' • expr ')' SEMI

    NUM     shift, and go to state 57
    ID      shift, and go to state 19
    STRVAL  shift, and go to state 58
    '('     shift, and go to state 59

    expr  go to state 60
    id    go to state 61


State 44

   52 id: ID LBRACK • NUM RBRACK
   53   | ID LBRACK • NUM RBRACK LBRACK NUM RBRACK
   54   | ID LBRACK • expr RBRACK
   55   | ID LBRACK • expr RBRACK LBRACK expr RBRACK

    NUM     shift, and go to state 62
    ID      shift, and go to state 19
    STRVAL  shift, and go to state 58
    '('     shift, and go to state 59

    expr  go to state 63
    id    go to state 61


State 45

   27 IfStmt: IF '(' • expr ')' THEN Slist ELSE Slist ENDIF SEMI
   28       | IF '(' • expr ')' THEN Slist ENDIF SEMI

    NUM     shift, and go to state 57
    ID      shift, and go to state 19
    STRVAL  shift, and go to state 58
    '('     shift, and go to state 59

    expr  go to state 64
    id    go to state 61


State 46

   29 WhileStmt: WHILE '(' • expr ')' DO Slist ENDWHILE SEMI

    NUM     shift, and go to state 57
    ID      shift, and go to state 19
    STRVAL  shift, and go to state 58
    '('     shift, and go to state 59

    expr  go to state 65
    id    go to state 61


State 47

   16 Slist: Slist • Stmt
   33 doWhileStmt: DO Slist • WHILE '(' expr ')' SEMI

    READ    shift, and go to state 17
    WRITE   shift, and go to state 18
    ID      shift, and go to state 19
    IF      shift, and go to state 20
    WHILE   shift, and go to state 66
    DO      shift, and go to state 22
    BREAK   shift, and go to state 23
    CONT    shift, and go to state 24
    REPEAT  shift, and go to state 25

    Stmt             go to state 52
    IfStmt           go to state 28
    WhileStmt        go to state 29
    BrkStmt          go to state 30
    ContStmt         go to state 31
    repeatUntilStmt  go to state 32
    doWhileStmt      go to state 33
    InputStmt        go to state 34
    OutputStmt       go to state 35
    AsgStmt          go to state 36
    id               go to state 37


State 48

   30 BrkStmt: BREAK SEMI •

    $default  reduce using rule 30 (BrkStmt)


State 49

   31 ContStmt: CONT SEMI •

    $default  reduce using rule 31 (ContStmt)


State 50

   16 Slist: Slist • Stmt
   32 repeatUntilStmt: REPEAT Slist • UNTIL '(' expr ')' SEMI

    READ    shift, and go to state 17
    WRITE   shift, and go to state 18
    ID      shift, and go to state 19
    IF      shift, and go to state 20
    WHILE   shift, and go to state 21
    DO      shift, and go to state 22
    BREAK   shift, and go to state 23
    CONT    shift, and go to state 24
    REPEAT  shift, and go to state 25
    UNTIL   shift, and go to state 67

    Stmt             go to state 52
    IfStmt           go to state 28
    WhileStmt        go to state 29
    BrkStmt          go to state 30
    ContStmt         go to state 31
    repeatUntilStmt  go to state 32
    doWhileStmt      go to state 33
    InputStmt        go to state 34
    OutputStmt       go to state 35
    AsgStmt          go to state 36
    id               go to state 37


State 51

    1 program: Declarations KW_BEGIN Slist END • SEMI

    SEMI  shift, and go to state 68


State 52

   16 Slist: Slist Stmt •

    $default  reduce using rule 16 (Slist)


State 53

   36 AsgStmt: id ASSIGN • expr SEMI

    NUM     shift, and go to state 57
    ID      shift, and go to state 19
    STRVAL  shift, and go to state 58
    '('     shift, and go to state 59

    expr  go to state 69
    id    go to state 61


State 54

   13 VarList: ID LBRACK NUM • RBRACK
   14        | ID LBRACK NUM • RBRACK LBRACK NUM RBRACK

    RBRACK  shift, and go to state 70


State 55

   10 VarList: VarList COMMA ID •
   12        | VarList COMMA ID • LBRACK NUM RBRACK
   15        | VarList COMMA ID • LBRACK NUM RBRACK LBRACK NUM RBRACK

    LBRACK  shift, and go to state 71

    $default  reduce using rule 10 (VarList)


State 56

   34 InputStmt: READ '(' id • ')' SEMI

    ')'  shift, and go to state 72


State 57

   48 expr: NUM •

    $default  reduce using rule 48 (expr)


State 58

   49 expr: STRVAL •

    $default  reduce using rule 49 (expr)


State 59

   47 expr: '(' • expr ')'

    NUM     shift, and go to state 57
    ID      shift, and go to state 19
    STRVAL  shift, and go to state 58
    '('     shift, and go to state 59

    expr  go to state 73
    id    go to state 61


State 60

   35 OutputStmt: WRITE '(' expr • ')' SEMI
   37 expr: expr • PLUS expr
   38     | expr • MINUS expr
   39     | expr • MUL expr
   40     | expr • DIV expr
   41     | expr • LT expr
   42     | expr • GT expr
   43     | expr • LE expr
   44     | expr • GE expr
   45     | expr • NE expr
   46     | expr • EQ expr

    PLUS   shift, and go to state 74
    MINUS  shift, and go to state 75
    MUL    shift, and go to state 76
    DIV    shift, and go to state 77
    LE     shift, and go to state 78
    LT     shift, and go to state 79
    GE     shift, and go to state 80
    GT     shift, and go to state 81
    NE     shift, and go to state 82
    EQ     shift, and go to state 83
    ')'    shift, and go to state 84


State 61

   50 expr: id •

    $default  reduce using rule 50 (expr)


State 62

   48 expr: NUM •
   52 id: ID LBRACK NUM • RBRACK
   53   | ID LBRACK NUM • RBRACK LBRACK NUM RBRACK

    RBRACK  shift, and go to state 85

    RBRACK    [reduce using rule 48 (expr)]
    $default  reduce using rule 48 (expr)


State 63

   37 expr: expr • PLUS expr
   38     | expr • MINUS expr
   39     | expr • MUL expr
   40     | expr • DIV expr
   41     | expr • LT expr
   42     | expr • GT expr
   43     | expr • LE expr
   44     | expr • GE expr
   45     | expr • NE expr
   46     | expr • EQ expr
   54 id: ID LBRACK expr • RBRACK
   55   | ID LBRACK expr • RBRACK LBRACK expr RBRACK

    PLUS    shift, and go to state 74
    MINUS   shift, and go to state 75
    MUL     shift, and go to state 76
    DIV     shift, and go to state 77
    LE      shift, and go to state 78
    LT      shift, and go to state 79
    GE      shift, and go to state 80
    GT      shift, and go to state 81
    NE      shift, and go to state 82
    EQ      shift, and go to state 83
    RBRACK  shift, and go to state 86


State 64

   27 IfStmt: IF '(' expr • ')' THEN Slist ELSE Slist ENDIF SEMI
   28       | IF '(' expr • ')' THEN Slist ENDIF SEMI
   37 expr: expr • PLUS expr
   38     | expr • MINUS expr
   39     | expr • MUL expr
   40     | expr • DIV expr
   41     | expr • LT expr
   42     | expr • GT expr
   43     | expr • LE expr
   44     | expr • GE expr
   45     | expr • NE expr
   46     | expr • EQ expr

    PLUS   shift, and go to state 74
    MINUS  shift, and go to state 75
    MUL    shift, and go to state 76
    DIV    shift, and go to state 77
    LE     shift, and go to state 78
    LT     shift, and go to state 79
    GE     shift, and go to state 80
    GT     shift, and go to state 81
    NE     shift, and go to state 82
    EQ     shift, and go to state 83
    ')'    shift, and go to state 87


State 65

   29 WhileStmt: WHILE '(' expr • ')' DO Slist ENDWHILE SEMI
   37 expr: expr • PLUS expr
   38     | expr • MINUS expr
   39     | expr • MUL expr
   40     | expr • DIV expr
   41     | expr • LT expr
   42     | expr • GT expr
   43     | expr • LE expr
   44     | expr • GE expr
   45     | expr • NE expr
   46     | expr • EQ expr

    PLUS   shift, and go to state 74
    MINUS  shift, and go to state 75
    MUL    shift, and go to state 76
    DIV    shift, and go to state 77
    LE     shift, and go to state 78
    LT     shift, and go to state 79
    GE     shift, and go to state 80
    GT     shift, and go to state 81
    NE     shift, and go to state 82
    EQ     shift, and go to state 83
    ')'    shift, and go to state 88


State 66

   29 WhileStmt: WHILE • '(' expr ')' DO Slist ENDWHILE SEMI
   33 doWhileStmt: DO Slist WHILE • '(' expr ')' SEMI

    '('  shift, and go to state 89


State 67

   32 repeatUntilStmt: REPEAT Slist UNTIL • '(' expr ')' SEMI

    '('  shift, and go to state 90


State 68

    1 program: Declarations KW_BEGIN Slist END SEMI •

    $default  reduce using rule 1 (program)


State 69

   36 AsgStmt: id ASSIGN expr • SEMI
   37 expr: expr • PLUS expr
   38     | expr • MINUS expr
   39     | expr • MUL expr
   40     | expr • DIV expr
   41     | expr • LT expr
   42     | expr • GT expr
   43     | expr • LE expr
   44     | expr • GE expr
   45     | expr • NE expr
   46     | expr • EQ expr

    PLUS   shift, and go to state 74
    MINUS  shift, and go to state 75
    MUL    shift, and go to state 76
    DIV    shift, and go to state 77
    SEMI   shift, and go to state 91
    LE     shift, and go to state 78
    LT     shift, and go to state 79
    GE     shift, and go to state 80
    GT     shift, and go to state 81
    NE     shift, and go to state 82
    EQ     shift, and go to state 83


State 70

   13 VarList: ID LBRACK NUM RBRACK •
   14        | ID LBRACK NUM RBRACK • LBRACK NUM RBRACK

    LBRACK  shift, and go to state 92

    $default  reduce using rule 13 (VarList)


State 71

   12 VarList: VarList COMMA ID LBRACK • NUM RBRACK
   15        | VarList COMMA ID LBRACK • NUM RBRACK LBRACK NUM RBRACK

    NUM  shift, and go to state 93


State 72

   34 InputStmt: READ '(' id ')' • SEMI

    SEMI  shift, and go to state 94


State 73

   37 expr: expr • PLUS expr
   38     | expr • MINUS expr
   39     | expr • MUL expr
   40     | expr • DIV expr
   41     | expr • LT expr
   42     | expr • GT expr
   43     | expr • LE expr
   44     | expr • GE expr
   45     | expr • NE expr
   46     | expr • EQ expr
   47     | '(' expr • ')'

    PLUS   shift, and go to state 74
    MINUS  shift, and go to state 75
    MUL    shift, and go to state 76
    DIV    shift, and go to state 77
    LE     shift, and go to state 78
    LT     shift, and go to state 79
    GE     shift, and go to state 80
    GT     shift, and go to state 81
    NE     shift, and go to state 82
    EQ     shift, and go to state 83
    ')'    shift, and go to state 95


State 74

   37 expr: expr PLUS • expr

    NUM     shift, and go to state 57
    ID      shift, and go to state 19
    STRVAL  shift, and go to state 58
    '('     shift, and go to state 59

    expr  go to state 96
    id    go to state 61


State 75

   38 expr: expr MINUS • expr

    NUM     shift, and go to state 57
    ID      shift, and go to state 19
    STRVAL  shift, and go to state 58
    '('     shift, and go to state 59

    expr  go to state 97
    id    go to state 61


State 76

   39 expr: expr MUL • expr

    NUM     shift, and go to state 57
    ID      shift, and go to state 19
    STRVAL  shift, and go to state 58
    '('     shift, and go to state 59

    expr  go to state 98
    id    go to state 61


State 77

   40 expr: expr DIV • expr

    NUM     shift, and go to state 57
    ID      shift, and go to state 19
    STRVAL  shift, and go to state 58
    '('     shift, and go to state 59

    expr  go to state 99
    id    go to state 61


State 78

   43 expr: expr LE • expr
